[package]
name = "macro-harness"
version = "0.0.1"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/macro-harness"
homepage = "https://github.com/kuy/macro-harness"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_toml = "0.11.4"
console = "0.14"
rand = "0.8.4"
similar = { version = "2.1", features = ["inline"] }
toml = "0.5.8"

[dev-dependencies]
similar-asserts = "1.1.0"
